--- a/index.html
+++ b/index.html
@@ -9,13 +9,29 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
+    <div class="calculator">
         <div class="display"></div>
-        <div class="clean">
-            <div class="clear"></div>
-            <div class="delete"></div>
+        <div class="grid-container">
+            <div class="grid-item"><a>AC</a></div>
+            <div class="grid-item"><a>C</a></div>
+            <div class="grid-item"><a>%</a></div>
+            <div class="grid-item"><a>/</a></div>
+            <div class="grid-item"><a>7</a></div>
+            <div class="grid-item"><a>8</a></div>
+            <div class="grid-item"><a>9</a></div>
+            <div class="grid-item"><a>+</a></div>
+            <div class="grid-item"><a>4</a></div>
+            <div class="grid-item"><a>5</a></div>
+            <div class="grid-item"><a>6</a></div>
+            <div class="grid-item"><a>-</a></div>
+            <div class="grid-item"><a>1</a></div>
+            <div class="grid-item"><a>2</a></div>
+            <div class="grid-item"><a>3</a></div>
+            <div class="grid-item"><a>x</a></div>
+            <div class="grid-item"><a>0</a></div>
+            <div class="grid-item"><a>.</a></div>
+            <div class="grid-item equal"><a>=</a></div>
         </div>
-        <div class="num-and-operators">
     </div>
 </body>
 </html>
