basic logic set up

--- a/index.html
+++ b/index.html
@@ -10,27 +10,31 @@
 </head>
 <body>
     <div class="calculator">
-        <div class="display"></div>
+        <div class="display">
+            <div class="arguments"></div>
+            <div class="results"></div>
+        </div>
         <div class="grid-container">
-            <div class="grid-item"><a>AC</a></div>
-            <div class="grid-item"><a>C</a></div>
-            <div class="grid-item"><a>%</a></div>
-            <div class="grid-item"><a>/</a></div>
-            <div class="grid-item"><a>7</a></div>
-            <div class="grid-item"><a>8</a></div>
-            <div class="grid-item"><a>9</a></div>
-            <div class="grid-item"><a>+</a></div>
-            <div class="grid-item"><a>4</a></div>
-            <div class="grid-item"><a>5</a></div>
-            <div class="grid-item"><a>6</a></div>
-            <div class="grid-item"><a>-</a></div>
-            <div class="grid-item"><a>1</a></div>
-            <div class="grid-item"><a>2</a></div>
-            <div class="grid-item"><a>3</a></div>
-            <div class="grid-item"><a>x</a></div>
-            <div class="grid-item"><a>0</a></div>
-            <div class="grid-item"><a>.</a></div>
-            <div class="grid-item equal"><a>=</a></div>
+            <!-- <div class="grid-item AC">AC</div> -->
+            <div class="grid-item">AC</div>
+            <div class="grid-item">C</div>
+            <div class="grid-item">%</div>
+            <div class="grid-item">/</div>
+            <div class="grid-item">7</div>
+            <div class="grid-item">8</div>
+            <div class="grid-item">9</div>
+            <div class="grid-item">+</div>
+            <div class="grid-item">4</div>
+            <div class="grid-item">5</div>
+            <div class="grid-item">6</div>
+            <div class="grid-item">-</div>
+            <div class="grid-item">1</div>
+            <div class="grid-item">2</div>
+            <div class="grid-item">3</div>
+            <div class="grid-item">x</div>
+            <div class="grid-item">0</div>
+            <div class="grid-item">.</div>
+            <div class="grid-item equal">=</div>
         </div>
     </div>
 </body>
