set up function to verify valid input

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 <body>
     <div class="calculator">
         <div class="display">
-            <div class="arguments"></div>
+            <div class="arguments">0</div>
             <div class="results"></div>
         </div>
         <div class="grid-container">
-            <!-- <div class="grid-item AC">AC</div> -->
             <div class="grid-item">AC</div>
             <div class="grid-item">C</div>
             <div class="grid-item">%</div>
